--- a/build.gradle
+++ b/build.gradle
@@ -3,37 +3,49 @@
 buildscript {
 //  ext.kotlin_version = '1.2.71'
   ext.kotlin_version = '1.2.61'
-    repositories {
-        //google()
-        jcenter()
-        // Google仓库
-        maven {
-            url 'https://maven.aliyun.com/repository/google'
-        }
+  repositories {
+    //google()
+    jcenter()
+    // Google仓库
+    maven {
+      url 'https://maven.aliyun.com/repository/google'
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+  }
+  dependencies {
+//    classpath 'com.android.tools.build:gradle:3.2.0'
+    classpath 'com.android.tools.build:gradle:3.0.0'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    classpath 'com.novoda:bintray-release:0.5.0'
+    // NOTE: Do not place your application dependencies here; they belong
+    // in the individual module build.gradle files
+  }
 }
 
 allprojects {
-    repositories {
-        //google()
-        jcenter()
-        // google仓库
-        maven {
-            url 'https://maven.aliyun.com/repository/google'
-        }
-        maven {
-            url 'https://maven.aliyun.com/repository/public'
-        }
+  repositories {
+    //google()
+    jcenter()
+    // google仓库
+    maven {
+      url 'https://maven.aliyun.com/repository/google'
     }
+    maven {
+      url 'https://maven.aliyun.com/repository/public'
+    }
+    maven {
+      url 'https://dl.bintray.com/mazaiting/Tool'
+    }
+  }
+  //加上这些
+  tasks.withType(Javadoc) {
+    options {
+      encoding "UTF-8"
+      charSet 'UTF-8'
+      links "http://docs.oracle.com/javase/7/docs/api"
+    }
+  }
 }
 
 task clean(type: Delete) {
-    delete rootProject.buildDir
+  delete rootProject.buildDir
 }
