--- a/sharedpreferences/build.gradle
+++ b/sharedpreferences/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
 
+apply plugin: 'kotlin-android'
 android {
   compileSdkVersion 28
   
@@ -31,6 +31,5 @@ dependencies {
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
-repositories {
-  mavenCentral()
-}
+
+//apply from: "./../jcenter.gradle"
