--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,9 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
+  lintOptions {
+    abortOnError false
+  }
 }
 
 dependencies {
@@ -30,6 +33,7 @@ dependencies {
   testImplementation 'junit:junit:4.12'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-  implementation project(path: ':sharedpreferences')
   implementation "com.mazaiting:log:1.0.0"
+  implementation "com.mazaiting:sp:1.0.0"
+//  implementation project(path: ':sharedpreferences')
 }
